added coprocessor class and starting point for other techniques to minisat

--- a/core/Makefile
+++ b/core/Makefile
@@ -1,4 +1,8 @@
 EXEC      = minisat
-DEPDIR    = mtl utils
+
+DEPDIR    = mtl utils 
+
+# extern control whether coprocessor should be integrated
+DEPDIR    += $(CPDEPEND)
 
 include $(MROOT)/mtl/template.mk
