preliminary version of parallel subsumption preprocessor

--- a/coprocessor-src/Makefile
+++ b/coprocessor-src/Makefile
@@ -1,4 +1,7 @@
 EXEC      = coprocessor
 DEPDIR    = mtl utils core
 
+CFLAGS    += $(INCFLAGS)
+LFLAGS    += $(INLDFLAGS)
+
 include $(MROOT)/mtl/template.mk
