--- a/core/Makefile
+++ b/core/Makefile
@@ -5,4 +5,7 @@ DEPDIR    = mtl utils
 # extern control whether coprocessor should be integrated
 DEPDIR    += $(CPDEPEND)
 
+CFLAGS    += $(INCFLAGS)
+LFLAGS    += $(INLDFLAGS)
+
 include $(MROOT)/mtl/template.mk
