--- a/coprocessor-src/Makefile
+++ b/coprocessor-src/Makefile
@@ -1,3 +1,6 @@
+# Makefile for coprocessor preprocessor
+# Copyright (c) 2012-2013, Norbert Manthey
+
 EXEC      = coprocessor
 DEPDIR    = mtl utils core
 
