--- a/simp/Makefile
+++ b/simp/Makefile
@@ -1,4 +1,16 @@
-EXEC      = minisat
+# Makefile for riss
+# Copyright (c) 2012-2013, Norbert Manthey
+
+EXEC      = riss3g
+
 DEPDIR    = mtl utils core
 
+# extern control whether coprocessor should be integrated
+DEPDIR    += $(CPDEPEND)
+
+CFLAGS    += $(INCFLAGS)
+LFLAGS    += $(INLDFLAGS)
+
+
 include $(MROOT)/mtl/template.mk
+
