implemented drup for BVE, (for EE without test)

--- a/checker/Makefile
+++ b/checker/Makefile
@@ -1,4 +1,19 @@
-all: verify cnfdd cnfuzz precochk lgl #mtcnfdd
+.PHONY: all clean
+
+all: certifiedSAT stc drup-check brup2drup verify cnfdd cnfuzz precochk lgl #mtcnfdd
+
+certifiedSAT: certifiedSAT.cc 
+	g++ certifiedSAT.cc -o certifiedSAT -O0 -g
+	
+stc: stc.c
+	gcc stc.c -o stc -O2 -static
+	
+drup-check: drup-check.c
+	gcc drup-check.c -o drup-check -O2 -static
+
+brup2drup: brup2drup.c
+	gcc brup2drup.c -o brup2drup -O2 -static
+
 
 cnfdd: cnfdd.c Makefile
 	g++ -o cnfdd cnfdd.c -Wall -O0
@@ -21,3 +36,5 @@ verify:
 clean:
 	rm -f mtcnfdd cnfuzz cnfdd precochk lgl verify
 	cd lingeling; make clean
+	rm -f *.o
+	rm -f certifiedSAT stc drup-check brup2drup
