have some kind of bad state analysis implemented

--- a/aiger-src/makefile
+++ b/aiger-src/makefile
@@ -66,10 +66,10 @@ aigand: aiger.o aigand.o makefile
 	$(CC) $(CFLAGS) -o $@ aigand.o aiger.o
 
 aigbmc: aiger.c aigbmc.c makefile ../picosat/picosat.o ../libriss3g.a
-	g++ $(CFLAGS) -o $@ -I.. aigbmc.c aiger.c ../picosat/picosat.o ../libriss3g.a -pthread -lrt -D __STDC_LIMIT_MACROS -D __STDC_FORMAT_MACROS -fpermissive
+	g++ $(CFLAGS) -o $@ -I.. aigbmc.c aiger.c ../picosat/picosat.o ../libriss3g.a -pthread -lrt -D __STDC_LIMIT_MACROS -D __STDC_FORMAT_MACROS -fpermissive $(ARGS)
 
 aigbmc-abc: aiger.c aigbmc.c makefile ../picosat/picosat.o ../libriss3g.a libabc.a
-	g++ $(CFLAGS) -o $@ -I.. aigbmc.c aiger.c ../picosat/picosat.o ../libriss3g.a libabc.a -lreadline -ldl -pthread -lrt -D __STDC_LIMIT_MACROS -D __STDC_FORMAT_MACROS -fpermissive -D USE_ABC
+	g++ $(CFLAGS) -o $@ -I.. aigbmc.c aiger.c ../picosat/picosat.o ../libriss3g.a libabc.a -lreadline -ldl -pthread -lrt -D __STDC_LIMIT_MACROS -D __STDC_FORMAT_MACROS -fpermissive -D USE_ABC  $(ARGS)
 	
 aig-plain-bmc: aiger.c aig-plain-bm.c makefile ../picosat/picosat.o
 	g++ $(CFLAGS) -o $@ aig-plain-bm.c aiger.c ../picosat/picosat.o -D __STDC_LIMIT_MACROS -D __STDC_FORMAT_MACROS
