--- a/shiftbmc-src/makefile
+++ b/shiftbmc-src/makefile
@@ -71,8 +71,8 @@ shiftbmc: aiger.c shiftbmc-picosat.c makefile ./picosat/picosat.o ../libriss.a
 shiftbmc-abc: aiger.c shiftbmc-picosat.c makefile ./picosat/picosat.o ../libriss.a libabc.a
 	g++ $(CFLAGS) -o $@ -I.. shiftbmc-picosat.c aiger.c ./picosat/picosat.o ../libriss.a libabc.a -lreadline -ldl -pthread -lrt -D __STDC_LIMIT_MACROS -D __STDC_FORMAT_MACROS -fpermissive -D USE_ABC  $(ARGS)
 	
-aig-plain-bmc: aiger.c aig-plain-bm.c makefile ./picosat/picosat.o
-	g++ $(CFLAGS) -o $@ aig-plain-bm.c aiger.c ./picosat/picosat.o -D __STDC_LIMIT_MACROS -D __STDC_FORMAT_MACROS
+aig-plain-bmc: aiger.c aig-plain-bmc.c makefile ./picosat/picosat.o
+	gcc $(CFLAGS) -o $@ aig-plain-bmc.c aiger.c ./picosat/picosat.o -D __STDC_LIMIT_MACROS -D __STDC_FORMAT_MACROS -fpermissive
 	
 aigdd: aiger.o aigdd.o makefile
 	$(CC) $(CFLAGS) -o $@ aigdd.o aiger.o
