added library interfaces, added first files for proof checker

--- a/proofcheck-src/Makefile
+++ b/proofcheck-src/Makefile
@@ -1,7 +1,7 @@
 # Makefile for dratcheck based on riss data strcutures
 # Copyright (c) 2012-2015, Norbert Manthey
 
-EXEC      = dratcheck
+EXEC      = proofcheck
 
 DEPDIR    = mtl utils 
 
