proof checker can perform forward checking

--- a/proofcheck-src/Makefile
+++ b/proofcheck-src/Makefile
@@ -5,6 +5,9 @@ EXEC      = proofcheck
 
 DEPDIR    = mtl utils 
 
+# extern control whether coprocessor should be integrated
+#DEPDIR    += $(CPDEPEND)
+
 CFLAGS    += $(INCFLAGS)
 LFLAGS    += $(INLDFLAGS)
 
