--- a/tools/checker/Makefile
+++ b/tools/checker/Makefile
@@ -1,12 +1,15 @@
 .PHONY: all clean
 
-all:  verify cnfdd cnfuzz  lgl 
+all:  verify cnfdd cnfuzz lgl drat-trim
 
 cnfdd: cnfdd.c Makefile
 	gcc -o cnfdd cnfdd.c -Wall -O0
 	
 cnfuzz: cnfuzz.c Makefile
 	gcc -o cnfuzz cnfuzz.c -Wall -O0
+
+drat-trim: drat-trim.c
+	gcc -O2 -o drat-trim drat-trim.c
 
 lgl:
 	cd lingeling; ./configure && make; cp lingeling ../lgl
