Restructures the smac scenario folder (like CSSC 2014 test environment)

--- a/tools/smac_scenarios/.gitignore
+++ b/tools/smac_scenarios/.gitignore
@@ -1,8 +1,9 @@
 # binaries
-MiniSATi/minisati
+solvers/MiniSATi/minisati
+solvers/MiniSATi_no_core/minisati
 
 # smac output folder
-*/smac_output
+smac_output
 
 # slurm output files
 slurm-*
