--- a/.gitignore
+++ b/.gitignore
@@ -8,12 +8,18 @@ depend.mk
 
 # Automatically generated version file containing the 
 # version number and the SHA hash of the current commit.
-utils/version.cc
+version.cc
 
 # KDevelop files
 .kdev4/
 .kdev_include_paths
 *.kdev4
+
+# CMake:
+# 
+# Some common build targets
+debug/
+release/
 
 # Latex build files
 *.aux
