Adds mprocessor cmake target

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,7 +32,7 @@ add_subdirectory(riss/)
 add_subdirectory(risslibcheck/)
 # add_subdirectory(classifier/)
 add_subdirectory(coprocessor/)
-# add_subdirectory(mprocessor/)
+add_subdirectory(mprocessor/)
 # add_subdirectory(pcasso/)
 # add_subdirectory(pfolio/)
 # add_subdirectory(proofcheck/)
