Adds cmake target for shiftbmc

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,5 +37,5 @@ add_subdirectory(mprocessor/)
 # add_subdirectory(pfolio/)
 # add_subdirectory(proofcheck/)
 # add_subdirectory(qprocessor/)
-# add_subdirectory(shiftbmc/)
+add_subdirectory(shiftbmc/)
 # add_subdirectory(test/)
