Adds classifier cmake target

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,7 +30,7 @@ add_definitions(-D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS)
 # 
 add_subdirectory(riss/)
 add_subdirectory(risslibcheck/)
-# add_subdirectory(classifier/)
+add_subdirectory(classifier/)
 add_subdirectory(coprocessor/)
 add_subdirectory(mprocessor/)
 # add_subdirectory(pcasso/)
