--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,7 +62,7 @@ add_subdirectory(mprocessor/)
 # add_subdirectory(pcasso/)
 # add_subdirectory(pfolio/)
 # add_subdirectory(proofcheck/)
-# add_subdirectory(qprocessor/)
+add_subdirectory(qprocessor/)
 add_subdirectory(shiftbmc/)
 add_subdirectory(aiger/)
 # add_subdirectory(test/)
