Removes redundand version dependency

--- a/riss/CMakeLists.txt
+++ b/riss/CMakeLists.txt
@@ -39,8 +39,6 @@ target_link_libraries(${PROJECT_NAME}-lib-static ${ZLIB_LIBRARY})
 target_link_libraries(${PROJECT_NAME}-lib-shared ${CMAKE_THREAD_LIBS_INIT})
 target_link_libraries(${PROJECT_NAME}-lib-static ${CMAKE_THREAD_LIBS_INIT})
 
-message("Version: ${VERSION}")
-
 set_target_properties(${PROJECT_NAME}-lib-static PROPERTIES
                                                  OUTPUT_NAME "${PROJECT_NAME}")
 set_target_properties(${PROJECT_NAME}-lib-shared PROPERTIES
@@ -57,7 +55,7 @@ add_executable(${PROJECT_NAME}-simp simp/Main.cc)
 # Custom version target that is always built, because it DEPENDS on a file (string)
 # that does not exist
 # build_version_file is nothing more than a unique string
-add_custom_target(version ALL DEPENDS ${PROJECT_NAME}-build_version_file)
+add_custom_target(version DEPENDS ${PROJECT_NAME}-build_version_file)
 
 # Tell CMake how to build the "build_version_file" on which the target "version"
 # depends on. On this way we will also create the version.cc file
@@ -67,7 +65,7 @@ add_custom_command(OUTPUT ${PROJECT_NAME}-build_version_file ${CMAKE_CURRENT_BIN
                                             -D PROJECT_NAME=${PROJECT_NAME}
                                             -P ${CMAKE_CURRENT_SOURCE_DIR}/utils/version.cmake)
 
-# explicitly say that the executable depends on the version
+# explicitly say that the libraries depends on the version
 add_dependencies(${PROJECT_NAME}-lib-shared version)
 add_dependencies(${PROJECT_NAME}-lib-static version)
 
@@ -83,18 +81,6 @@ else()
   target_link_libraries(${PROJECT_NAME}-core coprocessor-lib-shared)
   target_link_libraries(${PROJECT_NAME}-simp coprocessor-lib-shared)
 endif()
-
-# Custom version target that is always built, because it DEPENDS on a file (string)
-# that does not exist
-add_custom_target(${PROJECT_NAME}-version ALL
-                  # build_version_file is nothing more than a unique string
-                  DEPENDS ${PROJECT_NAME}-build_version_file)
-
-# Create a symlink to the binary as shortcut
-add_custom_command(TARGET  ${PROJECT_NAME}-core POST_BUILD
-                   COMMAND ${CMAKE_COMMAND} -E create_symlink ${PROJECT_NAME}-core ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${PROJECT_NAME})
-add_custom_command(TARGET  ${PROJECT_NAME}-simp POST_BUILD
-                   COMMAND ${CMAKE_COMMAND} -E create_symlink ${PROJECT_NAME}-simp ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${PROJECT_NAME})
 
 
 # Installation:
