Adds cmake target for pcasso

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,7 +59,7 @@ add_subdirectory(risslibcheck/)
 add_subdirectory(classifier/)
 add_subdirectory(coprocessor/)
 add_subdirectory(mprocessor/)
-# add_subdirectory(pcasso/)
+add_subdirectory(pcasso/)
 # add_subdirectory(pfolio/)
 # add_subdirectory(proofcheck/)
 add_subdirectory(qprocessor/)
