Adds cmake target for tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,4 +65,4 @@ add_subdirectory(pcasso/)
 add_subdirectory(qprocessor/)
 add_subdirectory(shiftbmc/)
 add_subdirectory(aiger/)
-# add_subdirectory(test/)
+add_subdirectory(test/)
