--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,7 +60,7 @@ add_subdirectory(classifier/)
 add_subdirectory(coprocessor/)
 add_subdirectory(mprocessor/)
 add_subdirectory(pcasso/)
-# add_subdirectory(pfolio/)
+add_subdirectory(pfolio/)
 add_subdirectory(proofcheck/)
 add_subdirectory(qprocessor/)
 add_subdirectory(shiftbmc/)
