--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,3 +66,4 @@ add_subdirectory(qprocessor/)
 add_subdirectory(shiftbmc/)
 add_subdirectory(aiger/)
 add_subdirectory(test/)
+add_subdirectory(doc/)
