Fixes version.cc generation outside the source directory

--- a/coprocessor/CMakeLists.txt
+++ b/coprocessor/CMakeLists.txt
@@ -57,6 +57,7 @@ add_custom_command(OUTPUT ${PROJECT_NAME}-build_version_file ${CMAKE_CURRENT_BIN
                    COMMENT "Build version file for ${PROJECT_NAME}"
                    COMMAND ${CMAKE_COMMAND} -D VERSION=${VERSION}
                                             -D PROJECT_NAME=${PROJECT_NAME}
+                                            -D GIT_DIR=${CMAKE_SOURCE_DIR}
                                             -P ${CMAKE_CURRENT_SOURCE_DIR}/version.cmake)
 
 add_library(${PROJECT_NAME}-lib-static STATIC ${LIB_SOURCES})
